--- a/ScreenInStyle/screeninstyle.nuspec
+++ b/ScreenInStyle/screeninstyle.nuspec
@@ -8,16 +8,16 @@
     <authors>Eizo</authors>
     <owners>fmotzet</owners>
     <!-- projectUrl is required for the community feed -->
-    <projectUrl>https://_Software_Location_REMOVE_OR_FILL_OUT_</projectUrl>
+    <projectUrl>https://www.eizo.de/zubehoer/software/screen-instyle/</projectUrl>
     <tags>screeninstyle Eizo Multitasking-software Dockingstations Monitor</tags>
     <summary>An Application to help Mith Multitasking on one Monitor, on multiple Monitors, and Dockingstations. Also assists in finding the mouse cursor.</summary>
     <description>An Application to help Mith Multitasking on one Monitor, on multiple Monitors, and Dockingstations. Also assists in finding the mouse cursor. </description>
     <releaseNotes> [Ver.1.1.10 Changes] | Windows 11 is supported | Mouse Pointer Utility is added </releaseNotes>
+    <iconUrl>https://github.com/fmotzet/sturdy-octo-giggle/blob/main/Screen%20InStyle%20Eizo.png</iconUrl>
     <!--<dependencies>
       <dependency id="" version="Windows 10 (32-bit, 64-bit), Windows 8.1 (32-bit, 64-bit), Windows 7 SP1 (32-bit, 64-bit) " />
       </dependencies>-->
-    <packageSourceUrl>https://github.com/stumbaumr/nugetpackages/</packageSourceUrl>
-    <docsUrl>https://support.d-imaging.sony.co.jp/app/webcam/en/</docsUrl> 
+    <packageSourceUrl>https://github.com/fmotzet/sturdy-octo-giggle</packageSourceUrl>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
