updated icon url

--- a/ScreenInStyle/screeninstyle.nuspec
+++ b/ScreenInStyle/screeninstyle.nuspec
@@ -12,7 +12,7 @@
     <tags>screeninstyle Eizo Multitasking-software Dockingstations Monitor</tags>
     <summary>An Application to help Mith Multitasking on one Monitor, on multiple Monitors, and Dockingstations. Also assists in finding the mouse cursor.</summary>
     <description>An Application to help Mith Multitasking on one Monitor, on multiple Monitors, and Dockingstations. Also assists in finding the mouse cursor. </description>
-    <iconUrl>https://github.com/fmotzet/sturdy-octo-giggle/blob/main/Screen%20InStyle%20Eizo.png</iconUrl>
+    <iconUrl>https://rawcdn.githack.com/fmotzet/sturdy-octo-giggle/a477da13cbdaecbc81b962bc1b0dcd164df5509b/Screen%20InStyle%20Eizo.png</iconUrl>
     <!--<dependencies>
       <dependency id="" version="Windows 10 (32-bit, 64-bit), Windows 8.1 (32-bit, 64-bit), Windows 7 SP1 (32-bit, 64-bit) " />
       </dependencies>-->
